--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <!-- Mutton Chop Biryani -->
                     <div class="menu-item">
                         <div class="menu-item-image">
-                            <img src="images/mutton.png" alt="Mutton Chop Biryani" loading="lazy">
+                            <img src="images/mutton-chop-biryani.png" alt="Mutton Chop Biryani" loading="lazy">
                         </div>
                         <div class="menu-item-content">
                             <div class="menu-item-header">
@@ -85,7 +85,6 @@
                                     <span class="price price-large">₹3,273</span>
                                 </div>
                             </div>
-                            <div class="menu-badge biryani">Biryani</div>
                         </div>
                     </div>
 
@@ -108,7 +107,6 @@
                                     <span class="price price-large">₹3,133</span>
                                 </div>
                             </div>
-                            <div class="menu-badge pulao">Pulao</div>
                         </div>
                     </div>
 
@@ -131,7 +129,6 @@
                                     <span class="price price-large">₹2,890</span>
                                 </div>
                             </div>
-                            <div class="menu-badge pulao">Pulao</div>
                         </div>
                     </div>
                 </div>
@@ -159,7 +156,6 @@
                                     <span class="price price-large">₹2,340</span>
                                 </div>
                             </div>
-                            <div class="menu-badge biryani">Biryani</div>
                         </div>
                     </div>
 
@@ -182,7 +178,6 @@
                                     <span class="price price-large">₹2,170</span>
                                 </div>
                             </div>
-                            <div class="menu-badge pulao">Pulao</div>
                         </div>
                     </div>
 
@@ -205,7 +200,6 @@
                                     <span class="price price-large">₹1,776</span>
                                 </div>
                             </div>
-                            <div class="menu-badge pulao">Pulao</div>
                         </div>
                     </div>
                 </div>
@@ -258,7 +252,7 @@
                 <div class="contact-card">
                     <div class="contact-icon">🕐</div>
                     <h3>Hours</h3>
-                    <p>12:00 noon to 11 p.m.</p>
+                    <p>12 noon onwards</p>
                 </div>
                 <div class="contact-card">
                     <div class="contact-icon">🚚</div>
