Biryani image change

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <!-- Mutton Chop Biryani -->
                     <div class="menu-item">
                         <div class="menu-item-image">
-                            <img src="images/mutton-chop-biryani.png" alt="Mutton Chop Biryani" loading="lazy">
+                            <img src="images/mutton-chop-biryani-5.png" alt="Mutton Chop Biryani" loading="lazy">
                         </div>
                         <div class="menu-item-content">
                             <div class="menu-item-header">
@@ -91,7 +91,7 @@
                     <!-- Mutton Chop Pulao -->
                     <div class="menu-item">
                         <div class="menu-item-image">
-                            <img src="images/mutton-chop-pulaao.png" alt="Mutton Chop Pulao" loading="lazy">
+                            <img src="images/mutton-chop-pulao-4.png" alt="Mutton Chop Pulao" loading="lazy">
                         </div>
                         <div class="menu-item-content">
                             <div class="menu-item-header">
@@ -113,7 +113,7 @@
                     <!-- Mutton Umoomi Pulao -->
                     <div class="menu-item">
                         <div class="menu-item-image">
-                            <img src="images/mutton-umoomi-pulaao.png" alt="Mutton Umoomi Pulao" loading="lazy">
+                            <img src="images/mutton-umoomi-pulao-4.png" alt="Mutton Umoomi Pulao" loading="lazy">
                         </div>
                         <div class="menu-item-content">
                             <div class="menu-item-header">
@@ -140,7 +140,7 @@
                     <!-- Chicken Drumstick Biryani -->
                     <div class="menu-item">
                         <div class="menu-item-image">
-                            <img src="images/chicken-drumstick-biryani.png" alt="Chicken Drumstick Biryani" loading="lazy">
+                            <img src="images/chicken-biryani-3.png" alt="Chicken Drumstick Biryani" loading="lazy">
                         </div>
                         <div class="menu-item-content">
                             <div class="menu-item-header">
@@ -162,7 +162,7 @@
                     <!-- Chicken Drumstick Pulao -->
                     <div class="menu-item">
                         <div class="menu-item-image">
-                            <img src="images/Chicken-drumstick-pulaao.png" alt="Chicken Drumstick Pulao" loading="lazy">
+                            <img src="images/chicken-biryani-4.png" alt="Chicken Drumstick Pulao" loading="lazy">
                         </div>
                         <div class="menu-item-content">
                             <div class="menu-item-header">
@@ -184,7 +184,7 @@
                     <!-- Chicken Umoomi Pulao -->
                     <div class="menu-item">
                         <div class="menu-item-image">
-                            <img src="images/chicken-umoomi-pulaao.png" alt="Chicken Umoomi Pulao" loading="lazy">
+                            <img src="images/chicken-umoomi-pulao-1.png" alt="Chicken Umoomi Pulao" loading="lazy">
                         </div>
                         <div class="menu-item-content">
                             <div class="menu-item-header">
@@ -247,7 +247,7 @@
                 <div class="contact-card">
                     <div class="contact-icon">📞</div>
                     <h3>Phone</h3>
-                    <p><a href="tel:+919833557657">+91 9833557657</a></p>
+                    <p><a href="tel:+919987421657">+91 9987421657</a></p>
                 </div>
                 <div class="contact-card">
                     <div class="contact-icon">🕐</div>
@@ -275,7 +275,7 @@
             </div>
             <div class="takeaway-badge">
                 <span class="bag-icon">🛍️</span>
-                <span>Filhaal Take Away</span>
+                <span>Filhaal Take Away & Free Delivery In Thane City</span>
             </div>
         </div>
     </section>
