Veg burger image enhanced

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="coming-soon-items">
                 <div class="coming-soon-item">
                     <div class="coming-soon-image">
-                        <img src="images/veg-2.png" alt="Veg. Burger" loading="lazy">
+                        <img src="images/veg-bur-wooden.png" alt="Veg. Burger" loading="lazy">
                     </div>
                     <div class="coming-soon-content">
                         <span class="hindi-text">सच्चा</span> <span class="english-text">Veg. Burger</span>
